# auto-league-closer

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  dev_requirements.txt  entry.py  leaguecloser.spec  pyproject.toml  requirements.txt
leaguecloser/: __main__.py  context.py  findimg.py
misc/: Auto League Closer.spec  Dev Setup.ps1  InstallerSetupScript.iss  dev-requirements.txt  requirements.txt
src/: app.py
src/leaguecloser/: __init__.py  computer.py  league.py  sikuli.py
src/leaguecloser/data/close_league.sikuli/: close_league.py
tests/: _test_full.py  context.py  test_brief.py  test_sequence.py
