[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leaguecloser"
version = "1.0.5"
authors = [
  { name="Giantpizzahead" },
]
description = "Mock package that auto-closes the League client"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
]

dependencies = [
  "psutil",
  "pyautogui",
  "pywin32",
  "requests",
]

[project.urls]
"Homepage" = "https://github.com/Giantpizzahead/auto-league-closer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
